--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   json_serializable: ^6.9.2
   build_runner: ^2.4.14
   json_annotation: ^4.9.0
+  flutter_native_splash: ^2.4.4
 
 
 dev_dependencies:
